--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,18 @@
     animation: slideIn 0.3s ease-in-out forwards;
     transform: translateY(100%);
 }
+
+.bg-gradient {
+    background-color: hsla(0, 0%, 100%, 1);
+    background-image:
+        radial-gradient(at 20% 11%, hsla(11, 100%, 99%, 1) 0px, transparent 50%),
+        radial-gradient(at 94% 22%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
+        radial-gradient(at 52% 53%, hsla(247, 84%, 85%, 1) 0px, transparent 50%),
+        radial-gradient(at 93% 95%, hsla(240, 49%, 77%, 1) 0px, transparent 50%),
+        radial-gradient(at 13% 91%, hsla(240, 54%, 82%, 1) 0px, transparent 50%),
+        radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
+}
+
+.customShadow {
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
